Edited title in html

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Teracloud is here... kinda.</h1>
+      <h1>Teracloud Interns are here... kinda.</h1>
       <p>
         You've reached the ultimate destination on the internet. If you're
         looking for something else, well... maybe the
